--- a/social media/youtube.html
+++ b/social media/youtube.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="container">
-        <header><img src="Images/OIPs.jpg" alt="Social Media Marketing"></header>
+        <header><img src="images/OIPs.jpg" alt="Social Media Marketing"></header>
         <nav>
          <ul>
             <li><a href="index.html">Home</a></li>
