--- a/social media/whatsapp.html
+++ b/social media/whatsapp.html
@@ -9,12 +9,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" type="image/png" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+
 </head>
 <body>
     <div id="container">
         <header>
-            <img src="Images/OIPs.jpg" alt="Social Media Marketing">
+            <img src="images/OIPs.jpg" alt="Social Media Marketing">
         </header>
         <nav>
             <ul>
