--- a/social media/facebook.html
+++ b/social media/facebook.html
@@ -46,7 +46,7 @@
 
             </p>
 
-            <img class="movie_post" src="Images/R.jpg" alt="Social Media Marketing">
+            <img class="movie_post" src="images/R.jpg" alt="Social Media Marketing">
 
             <h3 class="heading_style">Analytics & Reporting Track your progress with detailed reports that cover:</h3>
             <ul>
