--- a/social media/whatsapp.html
+++ b/social media/whatsapp.html
@@ -29,7 +29,7 @@
         <main>
             <h1 class="heading_style">WhatsApp — 2.78 billion MAUs
             </h1>
-
+<aside>
             <h2 class="heading_style">Why WhatsApp is a Great Social Media Platform for Your Brand
 
             </h2>
@@ -41,7 +41,9 @@
             <img class="movie_post" src="images/WhatsApp-Marketing-Features-you-can-use-26-2030x2048.png" alt="Social Media Marketing Services">
 
             <hr>
+</aside>
 
+<aside>
             <h2 class="heading_style">1. Direct Communication with Customers/High Engagement Rates
             </h2>
 
@@ -60,7 +62,7 @@
             </p>
 
             <img class="movie_post" src="images/Rich-Media-Image-1.14.16" alt="Networking">
-
+</aside>
         </main>
         <footer>
             &copy; 2024 Social Media Marketing Project Page
