--- a/social media/youtube.html
+++ b/social media/youtube.html
@@ -27,7 +27,7 @@
 
             <section id="muli_col">
                 <hr>
-                <div class="col">  
+                <div class="row">  
                  <h2>Why YouTube is a Great Social Media Platform for Your Brand
                 </h2>
             <p>YouTube is a video-sharing platform where users watch a billion hours of videos daily. Besides being the second largest social media app, YouTube is often called the second largest search engine after Google, its parent company. In an age where video content reigns supreme, YouTube has established itself as a leading social media platform, boasting over 2 billion monthly active users. For brands looking to amplify their reach and engage with audiences in a dynamic way, YouTube offers unparalleled opportunities. Here’s why your brand should consider leveraging this powerful platform:
@@ -37,7 +37,7 @@
           
             <hr>
 
-                <div class="col">
+                <div class="column">
                  <h3>Massive Audience Reach</h3>
             <img class="movie_post" src="images/social-media-content-creation-1024x536.png" alt="Content Creation">
             <p>YouTube has a massive audience reach due to its global accessibility, available in over 100 countries and multiple languages, attracting diverse viewers from various cultures. The platform's user-friendly interface makes it easy for users to navigate and discover content, encouraging frequent engagement. With a vast array of content types—ranging from music videos to tutorials—YouTube caters to a wide spectrum of interests, appealing to audiences of all ages. The personalized recommendations driven by its advanced algorithm keep viewers engaged and returning for more. Additionally, the rise of influencers has further expanded YouTube’s reach, as these creators attract large followings and draw new users to the platform. Combined with the ability to easily share videos across social media, YouTube’s ecosystem fosters an expansive and engaged community.
@@ -45,13 +45,13 @@
             </p>   
                 </div>
 
-                <div class="col">
+                <div class="column">
                  <h3>Engaging Video Content</h3>
             <img class="movie_post" src="images/Increase-Audience-Engagement-at-Your-Event-with-These-5-Steps_blog-banner.jpg" alt="AUdience Engagement">
             <p>YouTube is known for its engaging video content due to its diverse range of formats and styles, from vlogs and tutorials to music videos and documentaries. This variety allows creators to connect with audiences on different levels, catering to various interests and preferences. The visual and auditory elements of video inherently capture attention more effectively than text or static images, making content more immersive. Additionally, creators often use storytelling techniques to draw viewers in, fostering emotional connections and keeping them engaged. Interactive features, such as comments and likes, further enhance viewer participation and community building around the content. Overall, YouTube's emphasis on creativity and relatability makes its video content compelling and memorable for audiences.
 
             </p>
-
+            <div class="column">
             <h2>Social Media Marketing Tips and Tricks</h2>
 
 <ul> 
