--- a/social media/instagram.html
+++ b/social media/instagram.html
@@ -42,7 +42,7 @@
                  <h3>Visual Storytelling/High Engagement Rates</h3>
 
                  <video id="myVideo">
-                     <source src="audio/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+                     <source src="audio/Untitled video - Made with Clipchamp.mp4" type="video/mp4" autoplay>
         
                  </video>
             <p>Instagram is inherently a visual platform, allowing brands to communicate their message through stunning imagery and engaging videos. This focus on aesthetics enables you to showcase your products, services, and brand values in a way that resonates with your audience and tells a compelling story.Instagram boasts some of the highest engagement rates among social media platforms. Users are more likely to interact with content through likes, comments, and shares. This level of engagement fosters community and loyalty, making it an ideal platform for building relationships with customers. Instagram's emphasis on visual storytelling allows brands to craft compelling narratives through stunning images and videos, effectively capturing their audience's attention. This platform's visually-driven nature fosters creativity, enabling businesses to showcase their products and values in an engaging manner. Coupled with high engagement rates, where users actively like, comment, and share content, Instagram provides an ideal environment for brands to connect with their audience and build lasting relationships.
